# password-exchange

./: .gitignore  API_README.md  API_USAGE_GUIDE.md  BUILD  BUILD_WITHOUT_BAZEL.md  CLAUDE.md  Dockerfile  GEMINI.md  LICENSE  PR_REVIEW_TASKS.md  REFACTORING_PLAN.md  REST_API_IMPLEMENTATION_PLAN.md  ReadMe.md  VIEW_COUNT_DEPLOYMENT.md  WORKSPACE  docker-compose.yaml  email-config-issue.md  migration_add_expires_at.sql  migration_add_max_view_count.sql  migration_add_view_count.sql  passwordexchange.sql  render.yaml  skaffold.yaml  test-build.sh  test.pprof  test_max_view_count.go
app/: 1  BUILD  BUILD.bazel  Dockerfile.api  WORKSPACE  WORKSPACE.bak  composer.json  cpu.txt  database.go  email.go  encryption.go  encryption.proto  flamegraph.pl  forms.go  go.mod  go.sum  index.php  main.go  message.go  package-lock.json  package.json  passwordexchange.sql  stackcollapse-go.pl
app/api/: BUILD.bazel  go.mod  main.go  openapi.yaml
app/assets/: common.css  style.css
app/assets/js/: password-generator.js
app/aws/: BUILD.bazel  recievemessage.go  recievemessage.go.bak  sendmessage.go  session.go
app/cmd/: BUILD.bazel  package-lock.json  root.go
app/cmd/database/: BUILD.bazel  database.go  database2.go  database_test.go  migrator.go
app/cmd/email/: BUILD.bazel  email.go  email2.go  recieve.go  send.go
app/cmd/encryption/: BUILD.bazel  encryption.go  encryption2.go  go.sum.bak
app/cmd/keymanager/: encryptMaster.go  keymanager.go  keymanagerStart.go
app/cmd/reminder/: error_recovery_test.go  reminder.go  reminder_config_test.go  reminder_test.go  sidecar_test.go
app/cmd/web/: BUILD.bazel  forms.go  forms.go.bak  groupcache.go  web.go
app/common/: common.go
app/commons/: common.go  commons.go
app/config/: BUILD.bazel  config.go
app/database/: BUILD.bazel  database.go
app/databasepb/: database.pb.go  empty.go
app/docs/: docs.go  swagger.json  swagger.yaml
app/email/: BUILD.bazel  email.go
app/encryption/: BUILD.bazel  encryption.go  go.mod  go.sum
app/encryptionpb/: empty.go  encryption.pb.go  encryption_grpc.pb.go
app/grpc-server/: BUILD.bazel  main.go
app/inc/: database.php  functions.php  process.php
app/internal/domains/encryption/adapters/primary/grpc/: server.go
app/internal/domains/encryption/adapters/secondary/memory/: keygen.go
app/internal/domains/encryption/domain/: entities.go  errors.go  service.go
app/internal/domains/encryption/ports/primary/: service.go
app/internal/domains/encryption/ports/secondary/: keygen.go
app/internal/domains/message/adapters/primary/api/: docs.go  email_flow_test.go  handlers.go  handlers_test.go  schema_test.go  server.go  server_rate_limit_test.go  swagger_quality_test.go
app/internal/domains/message/adapters/primary/web/: discovery.go  discovery_test.go  handlers.go  handlers_test.go  server.go
app/internal/domains/message/domain/: entities.go  message_entities.go  message_errors.go  message_service.go  message_service_test.go
app/internal/domains/message/ports/contracts/: types.go
app/internal/domains/message/ports/primary/: message_service.go
app/internal/domains/message/ports/secondary/: config.go  encryption.go  health.go  logger.go  notification.go  password.go  storage.go  turnstile.go  url.go  validation.go
app/internal/domains/notification/domain/: circuit_breaker_test.go  entities.go  errors.go  reminder_service.go  reminder_service_test.go  service.go  service_test.go
app/internal/domains/notification/ports/contracts/: types.go
app/internal/domains/notification/ports/primary/: service.go
app/internal/domains/notification/ports/secondary/: config.go  email.go  logger.go  notification.go  queue.go  storage.go  template.go  url.go  validation.go
app/internal/domains/storage/domain/: entities.go  errors.go  service.go
app/internal/domains/storage/ports/primary/: service.go
app/internal/rabbitmq/: BUILD.bazel  rabbitmq.go
app/internal/shared/config/: config.go  config_test.go
app/internal/shared/database/migrations/: integration_test.go  migration.go  migration_test.go
app/internal/shared/logging/: bridge.go  config.go  log.go  log_test.go  ports.go  slog_adapter.go  zerolog_adapter.go
app/internal/shared/validation/: env.go
app/js/: script.js
app/message/: BUILD.bazel  message.go
app/messagepb/: empty.go
app/migrations/: 20260311000000_initial_schema.up.sql  20260311000001_add_view_count.down.sql  20260311000002_add_max_view_count.down.sql  20260311000003_add_expires_at.down.sql  20260311000004_add_email_reminders.down.sql  20260311000004_add_email_reminders.up.sql
app/pkg/: BUILD.bazel
app/pkg/pb/database/: database.pb.go  database_grpc.pb.go
app/pkg/pb/encryption/: encryption.pb.go  encryption_grpc.pb.go
app/pkg/pb/message/: message.pb.go
app/pkg/validation/: email.go  email_test.go
app/protos/: BUILD.bazel  database.proto  encryption.proto  message.proto
app/protos/encryption/: encryption.pb.go  encryption_grpc.pb.go
app/protos/encryptionpb/: encryption.pb.go  encryption_grpc.pb.go
app/rabbitmq/: BUILD.bazel  rabbitmq.go
app/templates/: 404.html  BUILD  about.html  aurora.html  confirmation.html  decryption.html  email_template.html  header.html  home.html  index.html  reminder_email_template.html
app/templates/assets/: bootstrap.min.css  common.css  fileupload.js  fileupload2.js  package-lock.json  password-generator.js  style.css  style.min.css  test-forge.js  test-forge2.js
app/templates/assets/js/: password-generator.js
protos/: BUILD.bazel  BUILD.bazel.bak  database.proto  encryption.proto  message.proto
slackbot/: BUILD  BUILD.bazel  Dockerfile  app.py  client.py  database.py  encryptionClient.py  gazelle_python.yaml  go.mod  go.sum  main.go  program.py  requirements.txt  skaffold.yaml
slackbot/controllers/: appHomeController.go  greetingController.go  slackcommand.go
slackbot/drivers/: slack.go
slackbot/kubernetes/: deployment.yaml  secrets.encrypted.yaml
slackbot/templates/: 404.html  confirmation.html  home.html
slackbot/views/: rendertemplate.go  views.go
slackbot/views/slackCommandAssets/: rocket.json
(+143 files in other folders)
