load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "api_lib",
    srcs = ["main.go"],
    importpath = "github.com/Anthony-Bible/password-exchange/app/api",
    visibility = ["//visibility:private"],
    deps = [
        "//commons",
        "//encryption:encryption_lib",
        "//message",
        "//protos:encryptionpb",
        "@com_github_gin_gonic_gin//:gin",
        "@com_github_rs_xid//:xid",
        "@org_golang_google_grpc//:go_default_library",
    ],
)

go_binary(
    name = "api",
    embed = [":api_lib"],
    visibility = ["//visibility:public"],
)
