load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "aws",
    srcs = [
        "sendmessage.go",
        "session.go",
    ],
    importpath = "github.com/Anthony-Bible/password-exchange/app/aws",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_aws_aws_sdk_go//aws:go_default_library",
        "@com_github_aws_aws_sdk_go//aws/session:go_default_library",
        "@com_github_aws_aws_sdk_go//service/sns:go_default_library",
    ],
)
