load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "cmd",
    srcs = ["root.go"],
    importpath = "github.com/Anthony-Bible/password-exchange/app/cmd",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_rs_zerolog//log",
        "@com_github_spf13_cobra//:go_default_library",
        "@com_github_spf13_viper//:viper",
    ],
)
