load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_docker//go:image.bzl", "go_image")
load("@io_bazel_rules_docker//container:container.bzl",  "container_push")

go_library(
    name = "database_lib",
    srcs = ["database.go"],
    importpath = "github.com/Anthony-Bible/password-exchange/app/database",
    visibility = ["//visibility:private"],
    deps = [
        "//app/commons",
        "//protos:databasepb_go_proto",
        "@com_github_go_sql_driver_mysql//:mysql",
        "@com_github_rs_zerolog//log",
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_google_grpc//reflection",
        "@org_golang_google_protobuf//types/known/emptypb",
    ],
)

go_image(
    name = "database",
    embed = [":database_lib"],
    pure = "on",
    visibility = ["//visibility:public"],
)

container_push(
    name = "database_push",
    format = "Docker",
    image = ":database",
    registry = "ghcr.io",
    repository = "anthony-bible/database",
    tag = "dev",
)
