load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_docker//go:image.bzl", "go_image")
load("@io_bazel_rules_docker//container:container.bzl", "container_push")

go_library(
    name = "encryption_lib",
    srcs = ["encryption.go"],
    importpath = "github.com/Anthony-Bible/password-exchange/app/encryption",
    visibility = ["//visibility:private"],
    deps = [
        "//protos:encryptionpb_go_proto",
        "@com_github_rs_xid//:xid",
        "@com_github_rs_zerolog//log",
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_google_grpc//reflection",
    ],
)

go_image(
    name = "encryption",
    embed = [":encryption_lib"],
    pure = "on",
    visibility = ["//visibility:public"],
)

container_push(
    name = "encryption_push",
    format = "Docker",
    image = ":encryption",
    registry = "ghcr.io",
    repository = "anthony-bible/encryption",
    tag = "dev",
)
