load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "grpc-server_lib",
    srcs = ["main.go"],
    importpath = "github.com/Anthony-Bible/password-exchange/app/grpc-server",
    visibility = ["//visibility:private"],
    deps = ["@org_golang_google_grpc//:go_default_library"],
)

go_binary(
    name = "grpc-server",
    embed = [":grpc-server_lib"],
    visibility = ["//visibility:public"],
)
