load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "database",
    srcs = [
        "database.go",
        "database2.go",
    ],
    importpath = "github.com/Anthony-Bible/password-exchange/app/cmd/database",
    visibility = ["//visibility:public"],
    deps = [
        "//app/cmd",
        "//app/config",
        "//protos:databasepb_go_proto",
        "@com_github_go_sql_driver_mysql//:mysql",
        "@com_github_rs_zerolog//log",
        "@com_github_spf13_cobra//:cobra",
        "@com_github_spf13_viper//:viper",
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_google_grpc//reflection",
        "@org_golang_google_protobuf//types/known/emptypb",
    ],
)
