load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "email",
    srcs = [
        "email.go",
        "recieve.go",
        "send.go",
    ],
    importpath = "github.com/Anthony-Bible/password-exchange/app/cmd/email",
    visibility = ["//visibility:public"],
    deps = [
        "//app/cmd",
        "//app/config",
        "//app/protos:messagepb_go_proto",
        "@com_github_golang_protobuf//proto:go_default_library",
        "@com_github_rabbitmq_amqp091_go//:amqp091-go",
        "@com_github_rs_zerolog//log",
        "@com_github_spf13_cobra//:go_default_library",
        "@com_github_spf13_viper//:viper",
    ],
)
